[workspace]
members = [
]

resolver = "2"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
opt-level = 3

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.

[workspace.package]
authors = ["myname <my@email> (my.site)"]
description = "rust app"
documentation = ""
publish = false
license = "MIT"
readme = "README.md"
exclude = [
    ".gitignore", 
    ".rustfmt.toml", 
    ".github", 
    ".rusty-hook.toml",
    "tests/**",
    ".vscode/**",
    ".gitattributes",
]

[workspace.lib]
crate-type = ["rlib"]
test = false

[workspace.lints.rust]
unsafe_code ={ level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

#[workspace.dependencies]

#[workspace.build-dependencies]

#[workspace.dev-dependencies]
